フォルダ変更

--- a/opencv-study/tutorial.html
+++ b/opencv-study/tutorial.html
@@ -32,6 +32,6 @@
         document.getElementById('status').innerHTML = 'OpenCV.js is ready.';
       }
     </script>
-    <script async src="./opencv.js" onload="onOpenCvReady();" type="text/javascript"></script>
+    <script async src="./lib/opencv.js" onload="onOpenCvReady();" type="text/javascript"></script>
   </body>
 </html>
