--- a/tensorflow-js-study/6-coco-ssd/index.html
+++ b/tensorflow-js-study/6-coco-ssd/index.html
@@ -18,9 +18,9 @@ limitations under the License.
 <body>
   <h1>TensorFlow.js Object Detection</h1>
   <select id='base_model'>
-    <option value="ssdlite_mobilenet_v2">SSD Lite Mobilenet V2</option>
-    <option value="ssd_mobilenet_v1">SSD Mobilenet v1</option>
-    <option value="ssd_mobilenet_v2">SSD Mobilenet v2</option>
+    <option value="lite_mobilenet_v2">SSD Lite Mobilenet V2</option>
+    <option value="mobilenet_v1">SSD Mobilenet v1</option>
+    <option value="mobilenet_v2">SSD Mobilenet v2</option>
   </select>
   <button type="button" id="run">Run</button>
   <button type="button" id="toggle">Toggle Image</button>
