--- a/tensorflow-js-study/12-simple-object-detection/index.html
+++ b/tensorflow-js-study/12-simple-object-detection/index.html
@@ -17,7 +17,7 @@ limitations under the License.
 
 <!doctype html>
 <head>
-  <link rel="stylesheet" href="../shared/tfjs-examples.css" />
+  <!-- <link rel="stylesheet" href="./shared/tfjs-examples.css" /> -->
   <link rel="stylesheet" href="./style.css" />
 </head>
 
