検知結果の画像を取得

--- a/tensorflow-js-study/13-face-api/index.html
+++ b/tensorflow-js-study/13-face-api/index.html
@@ -13,8 +13,6 @@
       position: absolute;
       border: solid 2px rgba(0, 64, 255, 0.6);
     }
-
-
   </style>
 </head>
 <body>
@@ -22,6 +20,9 @@
     <video autoplay="true" id="video"></video>
     <section id="results"></section>
   </section>
+
+  <section id="captures"></section>
+
   <script src="./lib/face-api.min.js"></script>
   <script src="index.js"></script>
 </body>
