--- a/tensorflow-js-study/13-face-api/index.html
+++ b/tensorflow-js-study/13-face-api/index.html
@@ -11,7 +11,9 @@
     }
     body > section > section#results > div.frame {
       position: absolute;
-      border: solid 2px rgba(0, 64, 255, 0.6);
+      border: solid 2px rgba(0, 255, 64, 0.6);
+      color: white;
+      pointer-events: none;
     }
   </style>
 </head>
