--- a/tensorflow-js-study/13-face-api/obs.html
+++ b/tensorflow-js-study/13-face-api/obs.html
@@ -12,14 +12,15 @@
     body > section > section#results > div.frame {
       position: absolute;
       border: solid 2px rgba(0, 255, 64, 0.6);
-      color: rgba(255, 255, 255, 0.7);
+      color: white;
       pointer-events: none;
     }
   </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flv.js/1.5.0/flv.min.js"></script>
 </head>
 <body>
   <section>
-    <video autoplay="true" id="video"></video>
+    <video id="video"></video>
     <section id="results"></section>
   </section>
 
@@ -29,9 +30,14 @@
   <script src="index.js"></script>
   <script>
     (async () => {
-      const stream = await navigator.mediaDevices.getUserMedia({ video: true })
-      video.srcObject = stream
       video.onloadeddata = start
+      const flvPlayer = flvjs.createPlayer({
+        type: 'flv',
+        url: 'http://localhost:8000/live/STREAM_NAME.flv'
+      })
+      flvPlayer.attachMediaElement(video)
+      flvPlayer.load()
+      flvPlayer.play()
     })()
   </script>
 </body>
