--- a/tensorflow-js-study/13-face-api/obs.html
+++ b/tensorflow-js-study/13-face-api/obs.html
@@ -12,7 +12,7 @@
     body > section > section#results > div.frame {
       position: absolute;
       border: solid 2px rgba(0, 255, 64, 0.6);
-      color: white;
+      color: rgba(255, 255, 255, 0.7);
       pointer-events: none;
     }
   </style>
