--- a/tensorflow-js-study/13-face-api/obs.html
+++ b/tensorflow-js-study/13-face-api/obs.html
@@ -19,6 +19,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flv.js/1.5.0/flv.min.js"></script>
 </head>
 <body>
+  <div>status: <span id="status"></span></div>
+
   <section>
     <video id="video"></video>
     <section id="results"></section>
