--- a/a-frame/草人/index.html
+++ b/a-frame/草人/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
+  <h2>LOM - グラフィグ風 草人</h2>
   <div id="main"></div>
   <script src="https://unpkg.com/aframe@0.9.1/dist/aframe-master.js"></script>
   <script type="module" src="https://unpkg.com/lighterhtml@0.9.4/esm/index.js?module"></script>
