--- a/webgl-example/草人/index.html
+++ b/webgl-example/草人/index.html
@@ -10,7 +10,8 @@
   <div id="main"></div>
   <script src="https://unpkg.com/aframe@0.9.1/dist/aframe-master.js"></script>
   <script type="module" src="https://unpkg.com/lighterhtml@0.9.4/esm/index.js?module"></script>
-  <script type="module" src="./shader.js"></script>
+  <script type="module" src="./shaders/leaf-flow.js"></script>
+  <script type="module" src="./shaders/eye.js"></script>
   <script type="module" src="./app.js"></script>
 </body>
 </html>
